interpreter/tests/test-modules/functions.enzo
// ── FUNCTIONS  -------------------
//= Nameless functions one liner with implicit return
($x: 3, $y: 2; $x + $y);   // prints 5

//= Nameless function: multi-line with explicit return
(
$x: 100;
$y: 100;
return($x + $y);
); // prints 200

//= Nameless function: multi-line with no explicit return (should error)
($x: 1;
 $y: 2;
 $x + $y;
);         // error: no explicit return in multi-line function

//= Nameless function: multi-line, explicit return, different values
($x: 101;
$y: 100;
return($x + $y);); // prints 201

//= Single line, implicit return
2-times-2: (2 * 2);
2-times-2();       // prints 4

//= Bare parens
(6);

//= Multi-line with params and default values
adder: (
param $x: 6; // these are default values
param $y: 6;
return($y + $x);
);

adder();                       // prints 12
$adder();                      // prints 12